fixes layout issue in system

--- a/ui/system/system.reel/system.css
+++ b/ui/system/system.reel/system.css
@@ -1,3 +1,6 @@
 .System {
-
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
+
